--- a/style.css
+++ b/style.css
@@ -708,6 +708,7 @@ input {
     font-size: 20px;
 }
 
+
 input [type="submit"],
 input [type="reset"] {
     height: 30px;
@@ -715,7 +716,7 @@ input [type="reset"] {
     background-color: #F7ECF5;
     display: flex;
     color: #F7ECF5;
-    padding: 5px;
+    padding: px;
 }
 
 label {
