--- a/style.css
+++ b/style.css
@@ -880,12 +880,22 @@ height: 100vh;
     /* Borde superior */
     border-bottom: 45px solid #B34F93;
     /* Borde inferior más grande y de otro color */
-    transition: filter 0.3s ease;
-    /* Animación suave al cambiar el filtro */
+    transition: opacity 0.3s ease;
+    opacity: 0.9;
 }
 
+
 .carousel-item img:hover {
-    color: #6b286d;
+    color: #F7ECF5;
+    border: 5px solid #7F3565;
+    /* Borde izquierdo */
+    border-right: 5px solid #7F3565;
+    /* Borde derecho */
+    border-top: 5px solid #7F3565;
+    /* Borde superior */
+    border-bottom: 45px solid #7F3565;
+
+    opacity: 1;
 
 }
 
@@ -897,7 +907,7 @@ height: 100vh;
 
 
 .carousel-item p {
-    font-family: 'Arial', sans-serif;
+font-family: "neulis-cursive", sans-serif;
     margin: 10px 0;
     color: #6b286d;
     font-weight: bold;
@@ -907,7 +917,7 @@ height: 100vh;
 
 .ver-mas {
     position: absolute;
-    bottom: 37px;
+    bottom: 41px;
     /* Ajusta según la posición deseada */
     transform: translateX(-50%);
     padding: 10px 20px;
@@ -916,9 +926,9 @@ height: 100vh;
     text-decoration: underline;
     font-weight: 700;
     color: var(--Rosi-clarito, #F7ECF5);
-    font-family: "Neulis Cursive";
+    font-family: "neulis-cursive", sans-serif;
     transition: opacity 0.5s ease;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 700;
 }
 
@@ -950,6 +960,6 @@ button.next {
 }
 
 button:hover {
-    color: #7F3565;
+    background-color: #7F3565;
     /* Cambia el color al pasar el mouse */
 }
