--- a/style.css
+++ b/style.css
@@ -12,11 +12,43 @@
     text-decoration: none;
     list-style: none;
     font-family: "elza", sans-serif;
-    scroll-behavior: smooth;
     cursor: url(img/iconos/cursor22.png), auto;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
 /*********** INDEX.HTML***********/
 
+
+
+
+/*********** todos los H***********/
+/* TODOS LOS H1*/
+h1 {
+    font-family: "neulis-cursive", sans-serif;
+    font-size: 100px;
+}
+
+/* TODOS LOS H2*/
+
+
+h2 {
+    font-family: "neulis-cursive", sans-serif;
+    font-size: 70px;
+    color: #B34F93;
+}
+
+/****todos los h3****/
+h3 {
+    font-size: 40px;
+    font-family: "neulis-cursive", sans-serif;
+    color: #B34F93;
+
+}
+
+/**************nav**************/
 #botonera {
     display: flex;
     justify-content: space-between;
@@ -95,17 +127,22 @@
 
 /*ANIMACIONES*/
 .brillo,
-.brillo2,
-.brillo2-0,
-.brillo-2 {
+.brillo2 {
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     animation: pulse 1s infinite alternate;
 }
 
-
+.brillo2-0,
+.brillo-2 {
+    position: absolute;
+    width: 35px;
+    height: 37px;
+    border-radius: 50%;
+    animation: pulse 1s infinite alternate;
+}
 
 
 @keyframes pulse {
@@ -138,16 +175,12 @@
 
 .saludo {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 0px 82px 0px 66px;
 
 }
 
-/* TODOS LOS H1*/
-h1 {
-    font-family: "neulis-cursive", sans-serif;
-    font-size: 110px;
-}
+
 
 .saludo h1 {
     font-weight: 700;
@@ -164,11 +197,7 @@ h1 {
     justify-content: space-evenly;
 }
 
-/* TODOS LOS H2*/
-h2 {
-    font-family: "neulis-cursive", sans-serif;
-    font-size: 70px;
-}
+
 
 
 .saludo2 h2 {
@@ -239,6 +268,7 @@ h2 {
     justify-content: space-between;
     padding: 0px 82px 0px 66px;
     align-items: flex-end;
+    margin-top: 50px;
 }
 
 .saludo-final h1 {
@@ -267,16 +297,16 @@ h2 {
 
 
 .brillo-2 {
-    top: 22%;
-    left: 30%;
+    top: 46%;
+    left: 84%;
     transform: translate(-50%, -50%);
     position: relative;
 }
 
 
 .brillo2-0 {
-    top: 15%;
-    left: 100%;
+    top: 46%;
+    left: 48%;
     transform: translate(-50%, -50%);
     position: relative;
 
@@ -286,7 +316,7 @@ h2 {
 /******FOOTER********/
 
 /*****redes fijas******/
-footer {}
+
 
 .redes {
     position: fixed;
@@ -315,7 +345,7 @@ footer {}
 
 }
 
-.mje {
+.mje a {
     display: flex;
     align-items: center;
     column-gap: 15px;
@@ -354,14 +384,21 @@ footer {}
     filter: none;
 }
 
+.mje h4:hover {
+    color: #7F3565;
+}
 
 /**************HTML SOBRE MI************/
 /*pantalla completa*/
-h4 {
-    color: #B34F93;
-    font-family: "Neulis Cursive";
-    font-size: 50px;
+#sobre-mi article {
+    display: flex;
+    justify-content: center;
 }
+
+
+
+
+
 
 #mipresentacion {
     height: 100vh;
@@ -371,54 +408,62 @@ h4 {
 
 #mipresentacion h2 {
     color: #B34F93;
-    font-weight: 700;
-    letter-spacing: 3px;
+    letter-spacing: 5px;
+    font-weight: 400;
+    margin: left 100px;
+
 }
 
 .nombre {
     display: flex;
     align-items: center;
-    padding: 40px 80px;
-    justify-content: space-between;
+    padding: 25px 15px;
+    justify-content: space-around;
 }
 
 .presentacion {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 14;
+    gap: 14px;
 }
 
 .mipresentacion {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .presentacion p {
-    font-size: 35px;
+    font-size: 24px;
     color: #B34F93;
-    max-width: 950px;
-    line-height: 1.3;
+    max-width: 820px;
+    line-height: 34px;
 }
 
 
 /******Section intereses*******/
 .intereses {
-    width: 50%;
-    padding: 95px 10px 95px 0x;
-
-
+    padding: 95px 10px 95px 0px;
 }
 
-.intereses h2 {
-    padding: 10px 10px 10px 64px;
+.hobbies {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    gap: 10px;
+}
+
+
+.titulo-hobbies p {
+    font-size: 32px;
+    font-style: normal;
     color: #B34F93;
+    padding-top: 10px;
 }
 
 .intereses ul {
     display: flex;
     justify-content: space-around;
-    margin-top: 100px;
 }
 
 .intereses li {
@@ -432,10 +477,9 @@ h4 {
     margin-top: 20px;
 }
 
-
-.intereses img {
-    margin-top: 90px;
-    padding-top: 50px;
+/*****************gifff**********************/
+.gif {
+    width: 100%;
 }
 
 /***********SECTION INFORMACION PERSONAL********/
@@ -446,33 +490,19 @@ h4 {
     /* Por defecto, cuatro columnas */
 }
 
-/*respoSIVE AJUSTAR*/
-@media (max-width: 1200px) {
-    .informacion-personal {
-        grid-template-columns: repeat(2, 1fr);
-        /* Dos columnas en pantallas medianas */
-    }
-}
-
-@media (max-width: 768px) {
-    .informacion-personal {
-        grid-template-columns: 1fr;
-        /* Una columna en pantallas pequeñas */
-    }
-}
 
 .grid-item {
     width: 100%;
     height: 300px;
-    max-width: 250;
     color: #B34F93;
+    margin-right: 20px;
 }
 
 .grid-item.uno {
     display: flex;
     align-items: flex-end;
-    padding-bottom: 60px;
-    padding-left: 77px;
+    margin-bottom: 60px;
+    margin-left: 20px;
 }
 
 
@@ -480,18 +510,13 @@ h4 {
     max-width: 280px;
 }
 
-/****todos los h3****/
-h3 {
-    font-size: 30px;
-    font-family: "neulis-cursive", sans-serif;
-
-}
 
 
 .informacion-personal h3 {
     margin: 15px 0;
     font-weight: 700;
     margin-top: 50px;
+    color: #B34F93;
 }
 
 .negrita {
@@ -620,29 +645,24 @@ h3 {
 
 
 /*************FORMULARIO DE CONTACTO**************/
-.body-formulario {
-    height: 100vh;   /**esto no me funciona:(*/
-}
+
 
 .contenedor-formulario {
     display: flex;
     flex-direction: column;
-    column-gap: 60px;
-    width: 100%;
     color: #B34F93;
     align-items: flex-end;
-    height: auto;
     padding-top: 20px;
+}
 
-
-
+.aviso {
+    display: flex;
+    width: 64%;
+    justify-content: space-evenly;
 }
 
 .formulario {
-    font-size: 48px;
-    font-weight: 700;
-    font-family: "neulis-cursive", sans-serif;
-    font-size: 50px;
+    font-size: 20px;
     margin-top: 30px;
     display: flex;
     width: 100%;
@@ -651,14 +671,17 @@ h3 {
 
 
 /*texto*/
-.formulario h2 {
+.formulario h3 {
     max-width: 550px;
     font-family: Elza;
     font-size: 50px;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 70px;
     padding-left: 57px;
 }
+
+
+
 
 .info p {
     font-size: 22px;
@@ -667,8 +690,8 @@ h3 {
 }
 
 
-.aviso h1 {
-    font-size: 90px;
+.aviso h2 {
+    line-height: 180px;
     font-weight: 700;
     margin-top: 30px;
     font-family: "neulis-cursive", sans-serif;
@@ -676,12 +699,6 @@ h3 {
 }
 
 
-.aviso {
-    display: flex;
-    width: 64%;
-    justify-content: space-evenly;
-
-}
 
 
 
@@ -777,7 +794,7 @@ textarea {
 
 
 .galeria {
-height: 100vh;
+    height: 100vh;
     background-color: #F7ECF5;
 }
 
@@ -906,7 +923,7 @@ height: 100vh;
 
 
 .carousel-item p {
-font-family: "neulis-cursive", sans-serif;
+    font-family: "neulis-cursive", sans-serif;
     margin: 10px 0;
     color: #6b286d;
     font-weight: bold;
@@ -961,4 +978,101 @@ button.next {
 button:hover {
     background-color: #7F3565;
     /* Cambia el color al pasar el mouse */
+}
+
+#iframe-musica {
+    width: 50%;
+}
+
+@media (max-width: 1350px) {
+    .redes {
+        display: none;
+    }
+
+    .mipresentacion {
+        text-align: center;
+        display: block;
+    }
+
+    .presentacion p {
+        font-size: 24px;
+        color: #B34F93;
+        display: block;
+        max-width: 100%;
+        line-height: 34px;
+        margin: 0 20px 20px 20px;
+    }
+
+    .intereses {
+        padding: 186px 10px 95px 0px;
+    }
+
+    .informacion-personal {
+        display: grid;
+        grid-gap: 40px;
+        grid-template-columns: 143px 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 1200px) { 
+    .informacion-personal {
+        grid-gap: 25px;
+        grid-template-columns: 75px 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 992px) { 
+    .informacion-personal {
+        grid-template-columns: repeat(2, 1fr);
+        margin-left: 20px;
+    }
+    .grid-item.uno {
+        display: none;
+    }
+
+    .gif {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .nombre {
+        display: block;
+        text-align: center;
+    }
+    .hobbies {
+        display: block;
+        text-align: center;
+        margin-top: 300px;
+    }
+
+    #iframe-musica {
+        width: 100%;
+    }
+
+    .informacion-personal {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 600px) {
+    .hobbies {
+        margin-top: 400px;
+    }
+    .informacion-personal {
+        text-align: center;
+    }
+    .intereses ul {
+        display: block;
+        text-align: center;
+    }
+    .intereses li{
+        display: block;
+    }
+    .grid-item.dos {
+        max-width: 100%;
+    }
+    .info-lista2 {
+        justify-content: center;
+    }
 }
